feat: criar endpoint de auditoria
